--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Daniel Wilhelm Thune</title>
     <meta name="description" content="Daniel Wilhelm Thune — content creator. Motivation, lifestyle, creator education, and China journey." />
     <link rel="stylesheet" href="styles.css" />
-    <img hero.jpg/>
+    <img src="hero.jpg" alt="Hero image/>
   </head>
   <body>
     <header class="nav">
