--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <title>Daniel Wilhelm Thune</title>
     <meta name="description" content="Daniel Wilhelm Thune — content creator. Motivation, lifestyle, creator education, and China journey." />
     <link rel="stylesheet" href="styles.css" />
-    <img src="hero.jpg" alt="Hero image/>
   </head>
-  <body>
-    <header class="nav">
-      <div class="nav-inner">
-        <a class="brand" href="#top" aria-label="Home">
-          <span class="brand-dot"></span>
-          <span>Daniel</span>
-        </a>
+<body>
+<section class="hero">
+<div class="container hero-grid">
+ <img src="hero.jpg" alt="Daniel smiling in a light outfit">
+</div>
+</section>
+
+
+  <header class="nav">
+    ...
+
 
         <nav class="nav-links" aria-label="Primary">
           <a href="#about">About</a>
