Fix hero image layout
Added content creator section with description and call-to-action buttons.Fix hero image layout

--- a/index.html
+++ b/index.html
@@ -9,10 +9,31 @@
   </head>
 <body>
 <section class="hero">
-<div class="container hero-grid">
- <img src="hero.jpg" alt="Daniel smiling in a light outfit">
-</div>
+  <div class="container hero-grid">
+
+    <div>
+      <span class="pill">Content Creator</span>
+      <h1>Build a life you’re proud of.<br><span class="muted">One post at a time.</span></h1>
+      <p class="lead">
+        I’m Daniel Wilhelm Thune. I create clean, educational short-form content about
+        motivation, self-improvement, lifestyle, and my journey toward China.
+      </p>
+
+      <div class="cta-row">
+        <a class="btn primary" href="#contact">Work with me</a>
+        <a class="btn" href="#content">See what I post</a>
+      </div>
+
+      <p class="micro">Based in Sweden · Creating in English + 中文</p>
+    </div>
+
+    <div class="hero-card">
+      <img src="hero.jpg" alt="Daniel smiling in a light outfit">
+    </div>
+
+  </div>
 </section>
+
 
 
   <header class="nav">
