--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
           </p>
           <div class="photo-grid">
             <figure class="photo">
-              <img src="assets/photo2.jpg" alt="Daniel sitting and smiling" />
+              <img src="photo2.jpg" alt="Daniel sitting and smiling" />
             </figure>
             <figure class="photo">
-              <img src="assets/photo1.jpg" alt="Daniel standing in a dark outfit" />
+              <img src="photo1.jpg" alt="Daniel standing in a dark outfit" />
             </figure>
           </div>
         </div>
